--- a/src/assets/styles/cmps/_sidebar.scss
+++ b/src/assets/styles/cmps/_sidebar.scss
@@ -85,6 +85,7 @@
             &:hover {
                 background-color: $secondary-btn-hover-color;
                 .trash-board {
+                    z-index: 32;
                     opacity: 1;
                 }
             }
